erDiagram
  Customer ||--o{ Address : "has many"
  Customer ||--o{ Store : "owns"
  Category ||--o{ Category : "parent-child"
  Store ||--o{ Product : "has many"
  Category ||--o{ Product : "has many"
  Product ||--o{ ProductImage : "has many"
  Customer ||--o{ Cart : "has"
  Cart ||--o{ CartItem : "has"
  Product ||--o{ CartItem : "in cart items"
  Customer ||--o{ Order : "places"
  Address ||--o{ Order : "used by"
  Order ||--o{ OrderItem : "contains"
  Product ||--o{ OrderItem : "ordered"
  Order ||--|| Payment : "has one"
  Customer ||--o{ Review : "writes"
  Product ||--o{ Review : "receives"

  Customer {
    int id PK
    string username
    string email
    string phone_number
    boolean is_vendor
    boolean email_verified
    datetime date_joined
    boolean is_active
    boolean is_staff
    boolean is_superuser
    boolean is_deleted
    datetime created_at
    datetime updated_at
  }

  Address {
    int id PK
    int customer_id FK
    string label
    string line1
    string line2
    string city
    string state
    string postal_code
    string country
    boolean is_default
    boolean is_deleted
    datetime created_at
    datetime updated_at
  }

  Store {
    int id PK
    int owner_id FK
    string name
    string slug
    string description
    boolean is_active
    boolean is_deleted
    datetime created_at
    datetime updated_at
  }

  Category {
    int id PK
    int parent_id FK
    string name
    string slug
    boolean is_active
    datetime created_at
    datetime updated_at
  }

  Product {
    int id PK
    int store_id FK
    int category_id FK
    string name
    string slug
    string sku
    string description
    decimal price
    decimal discount_price
    int stock
    boolean is_active
    boolean is_deleted
    datetime created_at
    datetime updated_at
  }

  ProductImage {
    int id PK
    int product_id FK
    string image_url
    string alt_text
    int display_order
    datetime created_at
    datetime updated_at
  }

  Cart {
    int id PK
    int customer_id FK
    boolean is_active
    datetime created_at
    datetime updated_at
  }

  CartItem {
    int id PK
    int cart_id FK
    int product_id FK
    int quantity
    datetime created_at
    datetime updated_at
  }

  Order {
    int id PK
    int customer_id FK
    int shipping_address_id FK
    string order_number
    string status  "pending|paid|shipped|delivered|cancelled"
    decimal subtotal_amount
    decimal discount_total
    decimal shipping_cost
    decimal tax_total
    decimal grand_total
    datetime placed_at
    datetime updated_at
  }

  OrderItem {
    int id PK
    int order_id FK
    int product_id FK
    int quantity
    decimal unit_price_snapshot
    decimal discount_snapshot
    datetime created_at
    datetime updated_at
  }

  Payment {
    int id PK
    int order_id FK  "1-1"
    string provider
    decimal amount
    string status "initiated|authorized|captured|failed|refunded"
    string transaction_id
    datetime paid_at
    datetime created_at
    datetime updated_at
  }

  Review {
    int id PK
    int product_id FK
    int customer_id FK
    int rating "1..5"
    string title
    string body
    boolean is_deleted
    datetime created_at
    datetime updated_at
  }
